Remove code for fetching collector auth tokens
